--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_API_URL=https://api.github.com/graphql
-REACT_INITIAL_SEARCH_VALUE=react
-REACT_GITHUB_TOKEN=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
+REACT_APP_API_URL=https://api.github.com/graphql
+REACT_APP_INITIAL_SEARCH_VALUE=react
+REACT_APP_GITHUB_TOKEN=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
